<resources>
    <!-- toolbar / about -->
    <string name="app_name">Bitcoin PoS</string>
    <string name="copyright" translatable="false">\u00A9 2016-2018</string>
    <string name="konstantinos_karasavvas">Konstantinos Karasavvas</string>
    <string name="exchange_rate">Exchange rate: Blockchain.Info, Cryptocompare.com</string>
    <!--<string name="copied_bitcoin_address">Address copied to clipboard!</string>-->
    <string name="copied_address">Address copied to clipboard!</string>

    <string name="app_name_version" translatable="false">%1$s  v%2$s</string>
    <string name="copyright_author" translatable="false">%1$s %2$s</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- tabs -->
    <string name="payment">Payment</string>
    <string name="history">History</string>

    <!-- preferences -->
    <string name="merchant_name">Merchant name</string>
    <string name="payment_address">Payment address</string>
    <string name="payment_amount">Payment amount</string>

    <string name="payment_address_btc">Bitcoin payment address</string>

    <string name="payment_address_ltc">Litecoin payment address</string>
    <string name="payment_address_btc_test">Bitcoin Testnet payment address</string>
    <string name="payment_address_bch">Bitcoin Cash payment address</string>

    <string name="local_currency">Local currency</string>
    <string name="scan">Scan</string>
    <string name="paste">Paste</string>

    <string name="merchant_name_key" translatable="false">MerchantNameKey</string>

    <string name="local_currency_key" translatable="false">LocalCurrencyKey</string>

    <string name="btc_payment_address_key" translatable="false">BtcPaymentAddressKey</string>
    <string name="ltc_payment_address_key" translatable="false">LtcPaymentAddressKey</string>
    <string name="btc_test_payment_address_key" translatable="false">BtcTestPaymentAddressKey</string>
    <string name="bch_payment_address_key" translatable="false">BchPaymentAddressKey</string>

    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_qr_code_prompt">Scan an address QR code</string>

    <!--<string name="invalid_bitcoin_address_message">This was not a valid Bitcoin address</string>-->
    <string name="invalid_address_message">This was not a valid cryptocurrency address</string>
    <string name="add_payment_address_title">Add payment address</string>
    <string name="add_payment_address_message">Please scan an address QR code or just paste the address.</string>


    <!--<string name="paste_bitcoin_address_message">Please paste your Bitcoin address here.</string>-->
    <string name="paste_address_message">Please paste your cryptocurrency address here.</string>
    <string name="request_payment">Request Payment</string>
    <!--<string name="amount_less_than_10000_message">The amount value should be less than 10000 BTC !</string>-->
    <string name="amount_less_than_10000_message">The amount value should be less than 10000 cryptocurrency units !</string>
    <string name="amount_has_more_decimals_than_allowed">You have reached the limit of the decimals allowed for the currency !</string>
    <!--<string name="specify_valid_bitcoin_address_message">Please specify a valid Bitcoin address to receive payments</string>-->
    <string name="specify_valid_cryptocurrency_address_message">Please specify a valid cryptocurrency address to receive payments</string>
    <string name="network_connection_not_available_message">Network connection is not available</string>

    <string name="request_payment_fragment_tag" translatable="false">request_payment_fragment_tag</string>
    <string name="about_fragment_tag" translatable="false">about_fragment_tag</string>
    <string name="add_item_dialog_fragment_tag" translatable="false">add_item_dialog_fragment_tag</string>
    <string name="item_action_list_dialog_fragment_tag" translatable="false">item_action_list_dialog_fragment_tag</string>
    <string name="show_item_list_dialog_fragment_tag" translatable="false">show_item_list_dialog_fragment_tag</string>

    <string name="payment_text">Payment:</string>
    <string name="payment_pending">Pending</string>
    <string name="payment_unconfirmed">Ongoing</string>
    <string name="payment_confirmed">Confirmed</string>
    <string name="payment_cancelled">Cancelled</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_id">No ID</string>
    <string name="delete_transaction_message">Do you want to delete this transaction?</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_status">Transaction status</string>
    <string name="other_pending_or_ongoing_transaction_title">Ongoing or pending transaction found</string>
    <string name="other_pending_or_ongoing_transaction_found_message">"There is already another pending or ongoing transaction for the requested cryptocurrency amount and for the specified payment address. The current transaction has to become confirmed in order to create a new one for the same cryptocurrency amount.
</string>

    <string name="accept_testnet_key" translatable="false">AcceptTestnetKey</string>

    <string name="accept_bitcoin_testnet_address_title">Bitcoin Testnet addresses</string>
    <string name="accept_bitcoin_testnet_address_summary">Activate to register Bitcoin Testnet addresses for payment testing</string>

    <string name="bitcoin_tx_title">Bitcoin transaction</string>
    <string name="litecoin_tx_title">Litecoin transaction</string>
    <string name="bitcoin_cash_tx_title">Bitcoin Cash transaction</string>
    <string name="bitcoin_testnet_tx_title">Bitcoin Testnet transaction</string>
    <string name="bitcoin_testnet_show_in_title">BTC Testnet</string>

    <string name="btc" translatable="false">BTC</string>
    <string name="ltc" translatable="false">LTC</string>
    <string name="bch" translatable="false">BCH</string>
    <string name="btctest" translatable="false">BTC</string>
    <string name="btctest_history_item" translatable="false">BTCt</string>

    <string name="bitcoin" translatable="false">bitcoin</string>
    <string name="litecoin" translatable="false">litecoin</string>
    <string name="bitcoin_cash" translatable="false">bitcoincash</string>
    <string name="bitcoin_testnet" translatable="false">bitcoin</string>

    <string name="bitcoin_nav_list" translatable="false">Bitcoin</string>
    <string name="litecoin_nav_list" translatable="false">Litecoin</string>
    <string name="bitcoin_cash_nav_list" translatable="false">Bitcoin Cash</string>
    <string name="bitcoin_testnet_nav_list" translatable="false">Bitcoin Testnet</string>

    <string name="navigation_crypto" translatable="false">navigation_crypto</string>
    <string name="select_cryptocurrency">Select cryptocurrency to receive payments:</string>

    <string-array name="currency_codes">
        <item>AUD</item>
        <item>BRL</item>
        <item>GBP</item>
        <item>CAD</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>DKK</item>
        <item>@string/default_currency_code</item>
        <item>HKD</item>
        <item>INR</item>
        <item>ISK</item>
        <item>JPY</item>
        <item>NZD</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>KRW</item>
        <item>SGD</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>THB</item>
        <item>TWD</item>
        <item>USD</item>
    </string-array>

    <string-array name="currency_names">
        <item>Australian Dollar</item>
        <item>Brazilian Real</item>
        <item>British Pound</item>
        <item>Canadian Dollar</item>
        <item>Chilean Peso</item>
        <item>Chinese Yuan</item>
        <item>Danish Krone</item>
        <item>Eurozone Euro</item>
        <item>Hong Kong Dollar</item>
        <item>Indian Rupee</item>
        <item>Icelandic Krona</item>
        <item>Japanese Yen</item>
        <item>New Zealand Dollar</item>
        <item>Polish Zloty</item>
        <item>Russian Ruble</item>
        <item>South Korean Won</item>
        <item>Signapore Dollar</item>
        <item>Swedish Krona</item>
        <item>Swiss Franc</item>
        <item>Thai Baht</item>
        <item>New Taiwan Dollar</item>
        <item>US Dollar</item>
    </string-array>

    <string name="default_currency_code">EUR</string>
    <string name="amount_needs_to_be_positive">Total amount needs to be positive</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="updating_exchange_rates">Updating exchange rates...</string>
    <string name="no_transaction_yet">No transactions made yet.</string>
    <string name="cancel">Cancel</string>
    <string name="transactions_report">Report</string>
    <string name="select_time_period">Select time period for the transaction report</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="date_range_not_valid">Date range is not valid</string>
    <string name="no_access_to_download_folder">Access denied to write file to Download folder.</string>
    <string name="access_external_storage_required_message">Access to external storage is required to write the CSV file in the Downloads folder.</string>
    <string name="no_transactions_in_date_range">No confirmed transactions found in selected date range</string>
    <string name="csv_file_saved">File %1$s saved in Download folder</string>
    <string name="product_name_optional">Item name (optional)</string>
    <string name="items">Items</string>
    <string name="total">Total</string>
    <string name="no_items_yet">No items/products added yet.</string>
    <string name="add_item">Add Item</string>
    <string name="add">Add</string>

    <string name="item_name">Name</string>
    <string name="item_price_currency_agnostic">Price (currency agnostic)</string>
    <string name="name_price_cannot_be_empty">Name and price need to be provided.</string>

    <string name="select">Select</string>
    <string name="update">Update</string>
    <string-array name="item_list_actions">
        <item>Edit item</item>
        <item>Delete item</item>
    </string-array>

    <string name="cart">Cart</string>
    <string name="remove_all">Remove all</string>
    <string name="choose_item">Choose an item</string>
    <string name="all_items_same_currency">Currently, all cart items need to be in the same currency</string>



</resources>
