<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/merchant_name_key"
        android:title="@string/merchant_name"
        android:defaultValue="@string/merchant_name"
        android:dialogTitle="@string/merchant_name" />

    <ListPreference
        android:key="@string/local_currency_key"
        android:title="@string/local_currency"
        android:defaultValue="@string/default_currency_code"
        android:entries="@array/currency_names"
        android:entryValues="@array/currency_codes"
        android:dialogTitle="@string/local_currency" />
    
    <Preference
        android:key="@string/btc_payment_address_key"
        android:title="@string/payment_address_btc"
        android:dialogTitle="@string/payment_address_btc"/>

    <Preference
        android:key="@string/bch_payment_address_key"
        android:title="@string/payment_address_bch"
        android:dialogTitle="@string/payment_address_bch"/>

    <Preference
        android:key="@string/ltc_payment_address_key"
        android:title="@string/payment_address_ltc"
        android:dialogTitle="@string/payment_address_ltc"/>

    <CheckBoxPreference
        android:key="@string/accept_testnet_key"
        android:title="@string/accept_bitcoin_testnet_address_title"
        android:summary="@string/accept_bitcoin_testnet_address_summary"
        android:defaultValue="false"/>

    <Preference
        android:id="@+id/btc_testnet_pref"
        android:key="@string/btc_test_payment_address_key"

        android:title="@string/payment_address_btc_test"
        android:dialogTitle="@string/payment_address_btc_test"/>



</PreferenceScreen>